<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">涂鸦画图</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="undo">撤销</string>
	<string name="reply">前进</string>
	<string name="share">分享</string>
	<string name="save">保存</string>
	<string name="poputimage">弹出菜单</string>
	<string name="canvansimg">图片画板</string>
	<string name="pen_shape">画笔粗细</string>
	<string name="button_ok">确定</string>
	<string name="button_cancel">取消</string>
	<string name="backimg_item">背景图片</string>
	<string name="crop_save_text" msgid="8140440041190264400">"保存"</string>
    <string name="crop_rotate_text">旋转</string>
    <string name="crop_discard_text" msgid="5303657888280340603">"舍弃"</string>
 <!--    <string name="runningFaceDetection">请稍后...</string> -->
     <string name="title_activity_cut">MainActivity</string>
     <string name="zoom">缩放比例</string>
     <string name="inputzoom">请输入缩放比例</string>
  <!--    <string name="inputroat">请输入旋转角度(-180-180)</string> -->
     <string name="main_screen">主界面</string>
     <string name="zoomcanvans">缩放画布</string>
     <string name="unindactor">指引未选中</string>
     <string name="indactor">选中指引</string>
     <string name="start_paint">开始2D涂鸦</string>
     <string name="back_help">帮助页面</string>
     <string name="mode_gongneng">功能模块</string>
      <string name="version">版本号</string>
      <string name="loadtitle">随心所欲,画我所想</string>
      <string name="groupname"> 叶下起舞 </string>
       <string name="canvas_height"> 高(可不填)</string>
       <string name="canvas_width"> 宽(可不填)</string>
       <string name="movecanvas"> 移动画布</string>
       <string name="mainname">涂鸦</string>
       <string name="colordialog">颜色选择对话框</string>
       <string name="selectphoto">选择图片</string>
       <string name="about">关于</string>
       <string name="mainimg">主功能</string>
       <string name="looptakepicture">重拍</string>
       <string name="cameraname">相机</string> 
       <string name="takepicture">拍摄</string>
       <string name="pastephoto">贴图</string>
       <string name="displaygrid">方格图片</string>
       <string name="alphasetting">透明度</string>
       <string name="fillcolor">填色</string>
       <string name="areaselect">区域选择</string>
       <string name="puzzlephoto">拼图</string>
       <string name="changephoto">更换背景图</string>
       <string name="blackcolor">黑色</string>
       <string name="pastetext">黏贴文字</string>
       <string name="apprecom">应用推荐</string>
    <string name="about_ad">关于广告</string>
    <string name="enter_special_text">输入自定义文字</string>
    <string name="text_size">文字大小</string>
    <string name="hello">你好</string>
</resources>
