<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.fjnu.edu.paint.MainActivity" >

     <item
        android:id="@+id/undo"
        android:showAsAction="always"
        android:icon="@drawable/undo"
        android:title="@string/undo"/>
	<item 
	    android:id="@+id/reply"
	    android:icon="@drawable/reply"
	    android:showAsAction="always"
	    android:title="@string/reply"/>

	<item
		android:id="@+id/save"
		android:icon="@drawable/save"
		android:showAsAction="always"
		android:title="@string/save"/>

	<item 
	    android:id="@+id/share"
	    android:icon="@drawable/share"
	    android:showAsAction="ifRoom"
	    android:title="@string/share"/>

	<item 
    	android:id="@+id/closecolor"
    	android:showAsAction="ifRoom"
    	android:title="@string/fillcolor"/>
	<item 
    	android:id="@+id/areaselect"
    	android:showAsAction="ifRoom"
    	android:title="@string/areaselect"/>
	<item 
    	android:id="@+id/pastetext"
    	android:showAsAction="ifRoom"
    	android:title="@string/pastetext"/>
	<item 
    	android:id="@+id/moreapp"
    	android:showAsAction="ifRoom"
    	android:title="@string/apprecom"/>
	<item
		android:id="@+id/about_ad"
		android:showAsAction="ifRoom"
		android:title="@string/about_ad"/>
</menu>
