<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <cn.fjnu.edu.paint.ui.ColorPicker
    android:id="@+id/picker"
    android:layout_gravity="center_horizontal"
    android:layout_width="150dp"
    android:layout_height="150dp"/>
    <CheckBox 
	    android:id="@+id/black_checkbox"
	    android:layout_gravity="center_horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/blackcolor"
	    android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/alphasetting"
        android:textSize="20sp" />
	<cn.fjnu.edu.paint.ui.OpacityBar
    android:id="@+id/opacitybar"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="horizontal">

		<Button
		    android:background="@drawable/color_button"
		    android:id="@+id/colorok"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/button_ok" />

		<Button
		    android:background="@drawable/color_button"
		    android:id="@+id/colorcancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/button_cancel" />
		
	</LinearLayout>
	
</LinearLayout>
