<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/shapelayout"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <SeekBar 
            android:id="@+id/pen_seekbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:max="100"
            android:animationResolution="100"
          />
        <TextView 
            android:text="5"
            android:id="@+id/process_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
	  <cn.fjnu.edu.paint.ui.DisplayPenSizeView
	      	android:layout_marginTop="10dp" 
	      	android:layout_marginBottom="10dp"
            android:id="@+id/pen_shape"
            android:background="@drawable/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/pen_shape"/>
	   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button 
            android:background="@drawable/color_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"
            android:layout_weight="1"
            android:id="@+id/pen_ok"/>
        <Button 
            android:background="@drawable/color_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:layout_weight="1"
            android:id="@+id/pen_cancel"/>
        </LinearLayout>
</LinearLayout>
